QA_Ipreo/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>AHRS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AHRS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>TEXT(Account.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Closed_On_Create__c</fullName>
        <label>Auto Closed On Create</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Owner Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Reference__c</fullName>
        <label>Case Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Resolution__c</fullName>
        <label>Case Resolution</label>
        <picklist>
            <controllingField>Sub_Type__c</controllingField>
            <picklistValues>
                <fullName>Resolved (Question Answered)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved (Software Fix Provided)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved (Data Fix Provided)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved (Activity Completed)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workaround provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Training Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed by Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Action Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_Month__c</fullName>
        <formula>MONTH( DATEVALUE(ClosedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Office_Phone__c</fullName>
        <formula>Contact.Phone</formula>
        <label>Contact Office Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Sent_Email_After_Case_Closed__c</fullName>
        <label>Customer Sent Email After Case Closed</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Day_of_the_Week_Created__c</fullName>
        <formula>CASE(
  MOD(  DATEVALUE(CreatedDate) - DATE( 1900, 1, 7 ), 7 ),
  0, &quot;Sunday&quot;,
  1, &quot;Monday&quot;,
  2, &quot;Tuesday&quot;,
  3, &quot;Wednesday&quot;,
  4, &quot;Thursday&quot;,
  5, &quot;Friday&quot;, 
  &quot;Saturday&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of the Week Created</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_of_the_Week_Cust_Responded__c</fullName>
        <description>Day of week when customer responded</description>
        <formula>CASE(
MOD( DATEVALUE( Last_Email_Received_From_Customer__c ) - DATE( 1900, 1, 7 ), 7 ),
0, &quot;Sunday&quot;,
1, &quot;Monday&quot;,
2, &quot;Tuesday&quot;,
3, &quot;Wednesday&quot;,
4, &quot;Thursday&quot;,
5, &quot;Friday&quot;, 
&quot;Saturday&quot;
)</formula>
        <label>Day of the Week Cust Responded</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effort_Minutes__c</fullName>
        <inlineHelpText>This field captures the amount of effort a rep spends on the ticket (not how long it was open).</inlineHelpText>
        <label>Effort (Minutes)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FactSet_Escalated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the case is FactSet Escalated</description>
        <inlineHelpText>If the case is FactSet Escalated</inlineHelpText>
        <label>FactSet Escalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Response_Provided_Date_Time__c</fullName>
        <label>First Response Provided Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Response_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Response Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Response_Time__c</fullName>
        <formula>CreatedDate - First_Response_Provided_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Response Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hour_Created_GMT__c</fullName>
        <formula>VALUE(MID(TEXT(CreatedDate - 5),12,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hour Created (GMT)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hour_Cust_Responded_GMT__c</fullName>
        <description>Hour in GMT when customer last responded</description>
        <formula>VALUE(MID(TEXT(Last_Email_Received_From_Customer__c - 5),12,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hour Cust Responded (GMT)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inserted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Help get case milestone by updating this field when the case is created.</description>
        <label>Inserted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Email_Received_From_Customer__c</fullName>
        <label>Last Email Received From Customer</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A user may populate this field (usually from the Opportunity Cases related list) for scenarios like trial access, which requires internal setup.</description>
        <inlineHelpText>Opportunity that lead to this case</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outage_Date__c</fullName>
        <label>Outage Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Outtale_Related__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outage Related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Activist Intelligence (Shark Repellent)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (2111)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (2242)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (5130)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (Alerts Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (Axe Management)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (Corporate Issuers)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (Derivatives)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (Equity)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (Fixed Income)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (QIB)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (Reg S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (Retail)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (SMMP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Advanced (Syndicated Loans)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Axe Management (Add-on Feature)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Corporate (Assist)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Corporate (Basic)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Corporate (CRM Add-on)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Corporate (Equity)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Corporate (Fixed Income)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Corporate (Retail)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Corporate Governance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Dialer (Add-on Feature)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Enterprise (Add-on Feature)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD IR Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Mail (Add-on Feature)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Research Distribution (Add-on)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Trade Management (Add-on Feature)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Responded_by_Email_But_Not_Taken_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to check when the email is replied by the service user, if someone has taken this owner of the case from a queue, check on, if not check off.</description>
        <label>Responded by Email But Not Taken Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Email_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If there is any email message has been sent, then the trigger will set this to true.</description>
        <label>Sent Email Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Account Set-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activate User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add On Users Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad hoc/management reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amend Coverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>API</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Assist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration Change Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact / activity import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivate User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Bounceback or Auto Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entitlements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure Alerts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware/Software Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hedge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Request/Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IssueNet Deal Alert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Known Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Localization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machine Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TFS_Ticket_No__c</fullName>
        <description>The numerical number of the TFS ticket.</description>
        <label>TFS Ticket No.</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TFS_URL__c</fullName>
        <description>A URL field to facilitate the adding of a UL  link to a TFS ticket</description>
        <inlineHelpText>Manually add the URL link to the TFS ticket for ease of access</inlineHelpText>
        <label>TFS URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Time_Elapsed_Before_First_Response__c</fullName>
        <formula>IF( ISBLANK(First_Response_Provided_Date_Time__c),0,(First_Response_Provided_Date_Time__c - CreatedDate)*1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Elapsed Before First Response</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Open__c</fullName>
        <formula>IF(IsClosed, TEXT(FLOOR(  ClosedDate - CreatedDate )) &amp; &quot; days&quot;, TEXT(FLOOR (NOW() - CreatedDate)) &amp; &quot; days&quot;)
&amp; &quot; &quot; &amp;
IF(IsClosed, TEXT( FLOOR( MOD( (ClosedDate - CreatedDate ) * 24, 24 ))) &amp; &quot; hours&quot;, TEXT( FLOOR( MOD( (NOW() - CreatedDate ) * 24, 24 ) )) &amp; &quot; hours&quot;)
&amp; &quot; &quot; &amp;
IF(IsClosed, TEXT(ROUND( MOD( (ClosedDate - CreatedDate ) * 24 * 60, 60 ), 0 )) &amp; &quot; minutes&quot;, TEXT( ROUND( MOD( (NOW() - CreatedDate ) * 24 * 60, 60 ), 0 )) &amp; &quot; minutes&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Open</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_to_Close__c</fullName>
        <formula>DATEVALUE( ClosedDate ) - DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trial_End_Date__c</fullName>
        <label>Trial End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trial_Start_Date__c</fullName>
        <label>Trial Start Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AM_Support_CPT_Closed</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Last_Email_Received_From_Customer__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.TYPE</columns>
        <columns>Sub_Type__c</columns>
        <columns>PRODUCT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email2Case (AM Support - CPT)</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>AM Support - CPT (Closed)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AM_Support_JP_Closed</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Last_Email_Received_From_Customer__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.TYPE</columns>
        <columns>Sub_Type__c</columns>
        <columns>PRODUCT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email2Case (AM Support - JP)</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>AM Support - JP (Closed)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AM_Support_JP_Open</fullName>
        <booleanFilter>(1 AND 2) OR (3 and 4)</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Last_Email_Received_From_Customer__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.TYPE</columns>
        <columns>Sub_Type__c</columns>
        <columns>PRODUCT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email2Case (AM Support - JP)</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Customer_Sent_Email_After_Case_Closed__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email2Case (AM Support - JP)</value>
        </filters>
        <label>AM Support - JP (Open)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AM_Support_NA_Case</fullName>
        <booleanFilter>(1 AND 2) OR (3 and 4)</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Last_Email_Received_From_Customer__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.TYPE</columns>
        <columns>Sub_Type__c</columns>
        <columns>PRODUCT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email2Case (AM Support)</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Customer_Sent_Email_After_Case_Closed__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email2Case (AM Support)</value>
        </filters>
        <label>*AM Support - (Open)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AM_Support_NA_Closed</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Last_Email_Received_From_Customer__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.TYPE</columns>
        <columns>Sub_Type__c</columns>
        <columns>PRODUCT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email2Case (AM Support)</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>*AM Support - (Closed)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllNewCasesToday</fullName>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CREATED_DATE_DATE_ONLY</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>* Cases - New Today</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.STATUS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.ORIGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>* Cases - All Open</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Cases</fullName>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>* Cases - All Open and Closed</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Corporate_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email2Case (SalesRequests-IR)</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>*All Open SalesRequest Corporate Cases</label>
        <sharedTo>
            <roleAndSubordinates>Corporate</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CMS_Case_Origin_All</fullName>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>Customer_Sent_Email_After_Case_Closed__c</columns>
        <columns>Last_Email_Received_From_Customer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email2Case (CMS)</value>
        </filters>
        <label>CMS Case Origin(All)</label>
        <sharedTo>
            <roleAndSubordinates>GMG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CMS_Case_Origin_Closed</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TFS_Ticket_No__c</columns>
        <columns>TFS_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email2Case (CMS)</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>CMS Case Origin(Closed)</label>
        <sharedTo>
            <roleAndSubordinates>GMG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CMS_Case_Origin_Open</fullName>
        <booleanFilter>(1 AND 2) OR (3 and 4)</booleanFilter>
        <columns>CASES.LAST_UPDATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>TFS_Ticket_No__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.STATUS</columns>
        <columns>Last_Email_Received_From_Customer__c</columns>
        <columns>CASES.TYPE</columns>
        <columns>CASES.EMAIL</columns>
        <columns>Sub_Type__c</columns>
        <columns>Product__c</columns>
        <columns>Time_Elapsed_Before_First_Response__c</columns>
        <columns>First_Response_Provided__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email2Case (CMS)</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Customer_Sent_Email_After_Case_Closed__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email2Case (CMS)</value>
        </filters>
        <label>CMS Case Origin (**Open**)</label>
        <sharedTo>
            <roleAndSubordinates>GMG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CMS_Case_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>CMS Case Queue</label>
        <queue>CMS_Case_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Corporate_Case_Origin_All</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.TYPE</columns>
        <columns>Sub_Type__c</columns>
        <columns>PRODUCT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email2Case (Corporate)</value>
        </filters>
        <label>Corporate Case Origin(All)</label>
        <sharedTo>
            <roleAndSubordinates>Corporate</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Corporate_Case_Origin_Closed</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.EMAIL</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.TYPE</columns>
        <columns>Sub_Type__c</columns>
        <columns>PRODUCT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email2Case (Corporate)</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Corporate Case Origin(Closed)</label>
        <sharedTo>
            <roleAndSubordinates>Corporate</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Account_Name_Non_Ipreo_Required</fullName>
        <active>true</active>
        <description>If Case Origin is &quot;Email2Case (AM Support)&quot; and Sub Type is NOT &quot;Ipreo ad hoc/management reports&quot; then when Case is Closed require that Account Name is populated and is not &quot;Ipreo&quot;.[SPS-1705]</description>
        <errorConditionFormula>AND(ISPICKVAL(Origin,&apos;Email2Case (AM Support)&apos;),  
NOT(ISPICKVAL(Sub_Type__c,&apos;Ipreo ad hoc/management reports&apos;)),  
ISPICKVAL(Status,&apos;Closed&apos;), 
(Account.Name = &apos;Ipreo&apos;))</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Account must be other than Ipreo</errorMessage>
    </validationRules>
</CustomObject>